templates/a4_candy_users/indicator.html: change dropdown menu font color for increased contrast

--- a/adhocracy-plus/assets/scss/components/_button.scss
+++ b/adhocracy-plus/assets/scss/components/_button.scss
@@ -78,7 +78,7 @@
 }
 
 .btn.btn--secondary-filled {
-    @include button-bg($brand-secondary, $brand-secondary, $print-black, 10%);
+    @include button-bg($brand-secondary, $brand-secondary, $body-bg, 10%);
 }
 
 .btn.btn--bg-tertiary {
