--- a/adhocracy-plus/templates/email_base.html
+++ b/adhocracy-plus/templates/email_base.html
@@ -50,7 +50,7 @@
           <td style="padding-top: 10px; padding-bottom: 10px; text-align: center;" align="center">
               <a href="{% block cta_url %}{% endblock %}"
                  style="padding: 0 20px; font-weight: bold; line-height: 40px; margin: 0 auto; color: #fff;
-                        background-color: #2d40cc; border-color: #2d40cc; display: inline-block;
+                        background-color: #e5045c; border-color: #e5045c; display: inline-block;
                         vertical-align: middle; text-decoration: none;">
                  {% block cta_label %}{% endblock %}
               </a>
